namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-pin-phone-monitor-qa/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-pin-phone-monitor-qa
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "qa"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "hmpps-prisoner-communication-monitoring"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-prisoner-communication-monitoring.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "sed_nonprod_alerts"
    cloud-platform.justice.gov.uk/slack-channel: "secure-estate-digital"
    cloud-platform.justice.gov.uk/team-name: "hmpps-security-intelligence-live"
